--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -27,4 +27,4 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: 'us-east-2'  # Cambia esto a tu región
         function_name: 'bbog-rlb-dynamo-stream-function'  # Nombre de tu Lambda
-        zip_file: 'index.js'  # Archivo que contiene tu Lambda
+        zip_file: 'function.zip'
