--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -22,7 +22,7 @@ jobs:
 
     # Crear el archivo .zip con el código de la Lambda desde la carpeta dist
     - name: Create zip file
-      run: zip -r function.zip dist/* node_modules/
+      run: zip -r function.zip build/* node_modules/
 
     - name: Deploy to AWS Lambda
       uses: appleboy/lambda-action@master
