--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -3,7 +3,7 @@ name: Deploy Lambda Function
 on:
   push:
     branches:
-      - main
+      - main  # Despliega en cada push a la rama "main"
 
 jobs:
   deploy:
@@ -16,24 +16,20 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    # Compilar TypeScript a JavaScript
     - name: Compile TypeScript
       run: npm run build
 
+    # Crear el archivo .zip con el código de la Lambda desde la carpeta dist
     - name: Create zip file
-      run: |
-        cd build
-        zip -r ../function.zip ./*
-        cd ..
-        zip -r function.zip node_modules/
+      run: zip -r function.zip node_modules build index.js package.json
 
     - name: Deploy to AWS Lambda
       uses: appleboy/lambda-action@master
       with:
+        function-handler: index.handler
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws_region: 'us-east-2'
-        function_name: 'bbog-rlb-dynamo-stream-function'
-        function_handler: 'index.handler'
+        aws_region: 'us-east-2'  # Cambia esto a tu región
+        function_name: 'bbog-rlb-dynamo-stream-function'  # Nombre de tu Lambda
         zip_file: 'function.zip'
-        runtime: 'nodejs18.x'
-        memory_size: 128
