--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -33,6 +33,8 @@ jobs:
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: 'us-east-2'
+        load-secrets-environment: true
+        path-environments-variables: "pipeline/env.json"
         function_name: 'bbog-rlb-dynamo-stream-function'
         function_handler: 'index.handler'  # Simplificamos el handler
         zip_file: 'function.zip'
